--- a/css/style.css
+++ b/css/style.css
@@ -38,15 +38,18 @@ body{
 
 /* Landing Image */
 
-.home-inner{
+#location-input{
     background-image: url('../assets/truck.jpg');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
-
 
 
 /* Procedure */
 .procedure {
-    background-color: #EEEEEE;
+    background-color: lightgray;
     margin-top:30px;
     display:block;
 }
@@ -56,6 +59,11 @@ body{
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
+    
+}
+
+.procedure_title{
+    margin-bottom:4r0px;
 }
 
 .img-container{
@@ -66,7 +74,7 @@ body{
     width:60px;
     border-radius: 30px;
     overflow-x:hidden;
-    border: 3px solid #00adb5;
+    border: 3px solid #393E46;
 }
 
 .text-container {
@@ -74,14 +82,14 @@ body{
     justify-content: center;
     align-items: center;
     margin-top:25px;
-
+    font-weight: 600;
 }
 
 /* Service */
 
 .service{
-    background-color:#505962;
-    margin-top:30px;
+    background-color:#222831;
+    margin-top:50px;
     display:block;
 }
 
